--- a/utils_8h.html
+++ b/utils_8h.html
@@ -77,8 +77,9 @@ This graph shows which files directly or indirectly include this file:</div>
 <div class="dyncontent">
 <div class="center"><img src="utils_8h__dep__incl.png" border="0" usemap="#asrc_2utils_8hdep" alt=""/></div>
 <map name="asrc_2utils_8hdep" id="asrc_2utils_8hdep">
-<area shape="rect" title="General Utilities for C language." alt="" coords="21,5,100,32"/>
-<area shape="rect" href="test__utils_8h_source.html" title=" " alt="" coords="5,80,116,107"/>
+<area shape="rect" title="General Utilities for C language." alt="" coords="76,5,155,32"/>
+<area shape="rect" href="treeVal_8h_source.html" title=" " alt="" coords="5,80,100,107"/>
+<area shape="rect" href="test__utils_8h_source.html" title=" " alt="" coords="124,80,235,107"/>
 </map>
 </div>
 </div>
